[project]
name = "rl-traffic-control"
version = "0.1.0"
description = "Reinforcement Learning Traffic Control with SUMO Simulation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.1.0",
    "ray[tune]>=2.8.0",
    "sumo-rl>=1.4.0",
    "gymnasium>=0.29.0",
    "pettingzoo<1.25.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tensorboard>=2.14.0",
    "pyyaml>=6.0",
    "hydra-core>=1.3.0",
    "dm-tree>=0.1.9",
    "scipy>=1.10.0",
    "lz4>=4.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.12"
strict = true
